optimalizace boolean promennych